[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "thetis"
version = "0.0.1"
dependencies = [
  "netCDF4",
  "pylit",
  "pyproj",
  "pytz",
  "scipy",
  "traitlets",
  "uptide",
  "vtk",
]
authors = [
  {name = "Tuomas Karna", email = "tuomas.karna@gmail.com" },
]
description = "Finite element ocean model"
readme = "readme.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python",
]

[project.urls]
Homepage = "https://thetisproject.org"
Repository = "https://github.com/thetisproject/thetis.git"

[tool.setuptools]
packages = ["thetis", "test", "examples"]
