[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "thetis"
version = "0.0.1"
dependencies = [
  "netCDF4",
  "pylit",
  "pyproj",
  "pytz",
  "scipy",
  "traitlets",
  "uptide",
  "vtk",
]
authors = [
  {name = "Tuomas Karna", email = "tuomas.karna@gmail.com" },
]
description = "Finite element ocean model"
readme = "readme.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python",
]

[project.urls]
Homepage = "https://thetisproject.org"
Repository = "https://github.com/thetisproject/thetis.git"

[tool.setuptools]
packages = ["thetis", "test", "examples"]

[project.optional-dependencies]
# Dependencies needed to build the docs
docs = [
  "bibtexparser",
  "matplotlib",  # needed to resolve API
  "numpydoc",
  "pylit",
  "sphinx<8.2.0",  # https://github.com/firedrakeproject/firedrake/issues/4059
  "sphinx-autobuild",
  "sphinx-reredirects",
  "sphinxcontrib-bibtex",
  "sphinxcontrib-jquery",
  "sphinxcontrib-svg2pdfconverter",
  "sphinxcontrib-youtube",
  "vtk",  # needed to resolve API
]

dev = [
  "pytest-cov",
]
