[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "thetis"
version = "2026.4.0"
dependencies = [
  "netCDF4",
  "pylit",
  "pyproj",
  "pytz",
  "scipy",
  "traitlets",
  "uptide",
  "vtk",
  "pyyaml",
]
authors = [
  {name = "Tuomas Karna", email = "tuomas.karna@gmail.com" },
]
description = "Finite element ocean model"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python",
]

[project.urls]
Homepage = "https://thetisproject.org"
Repository = "https://github.com/thetisproject/thetis.git"

[tool.setuptools]
packages = ["thetis", "test", "examples"]

[project.optional-dependencies]
# Dependencies needed to build the docs
docs = [
  "bibtexparser",
  "matplotlib",  # needed to resolve API
  "numpydoc",
  "pylit",
  "sphinx<8.2.0",  # https://github.com/firedrakeproject/firedrake/issues/4059
  "sphinx-autobuild",
  "sphinx-reredirects",
  "sphinxcontrib-bibtex",
  "sphinxcontrib-jquery",
  "sphinxcontrib-svg2pdfconverter",
  "sphinxcontrib-youtube",
  "vtk",  # needed to resolve API
]

# Developer/test tooling (not required for end users)
lint = [
  "flake8",
]

test = [
  "ipympl",  # needed for notebook testing
  "matplotlib",
  "mpi-pytest>=2026.0",
  "nbval",
  "pylit",
  "pytest",
  "pytest-timeout",
  "pytest-xdist",
  "vtk",
  "decorator<=4.4.2",  # Firedrake
]
